--- a/examples/moodle/docker-compose.yml
+++ b/examples/moodle/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - REVERSE_PROXY_HOST=https://mymoodle:8443
 
   mymoodle:
-    image: bitnami/moodle
+    image: bitnami/moodle:latest
     restart: always
     volumes:
       - ./moodle-files:/bitnami/moodle
@@ -43,9 +43,10 @@ services:
       - MOODLE_DATABASE_NAME=moodle
       - MOODLE_DATABASE_USER=user
       - MOODLE_DATABASE_PASSWORD=db-user-pwd # replace with a stronger password (must match MYSQL_PASSWORD)
-
+    depends_on:
+      - mydb
   mydb:
-    image: mariadb
+    image: mariadb:10.5
     restart: always
     volumes:
       - ./db-data:/var/lib/mysql
@@ -54,3 +55,5 @@ services:
       - MYSQL_DATABASE=moodle
       - MYSQL_USER=user
       - MYSQL_PASSWORD=db-user-pwd           # replace with a stronger password (must match MOODLE_DATABASE_PASSWORD)
+      - MARIADB_CHARACTER_SET=utf8mb4
+      - MARIADB_COLLATE=utf8mb4_unicode_ci
